cluster/phpmyadmin/deployment-mysql.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: phpmyadmin-mysql-deployment
  namespace: phpmyadmin
spec:
  replicas: 1
  serviceName: phpmyadmin-mysql
  selector:
    matchLabels:
      app: phpmyadmin-mysql
  template:
    metadata:
      labels:
        app: phpmyadmin-mysql
    spec:
      nodeSelector:
        role: apps
      containers:
        - env:
            - name: MARIADB_RANDOM_ROOT_PASSWORD
              value: "1"
            - name: MARIADB_USER
              value: phpmyadmin
            - name: MARIADB_DATABASE
              value: phpmyadmin
          image: cr.nathanv.app/docker.io/library/mariadb:13.0.2
          name: mariadb
          ports:
            - containerPort: 3306
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysql-vol
      volumes:
        - name: mysql-vol
          persistentVolumeClaim:
            claimName: phpmyadmin-pvc-mysql
