cluster/phpmyadmin/service-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin-mysql-service
  namespace: phpmyadmin
spec:
  type: ClusterIP
  selector:
    app: phpmyadmin-mysql
  ports:
    - port: 3306
      protocol: TCP
