cluster/phpmyadmin/service-phpmyadmin.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin-service
  namespace: phpmyadmin
spec:
  type: ClusterIP
  selector:
    app: phpmyadmin
  ports:
    - port: 80
      protocol: TCP
