cluster/phpmyadmin/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: phpmyadmin-route
  namespace: phpmyadmin
  annotations:
    k8s-dns.nathanv.me/hostname: phpmyadmin.nathanv.app
    k8s-dns.nathanv.me/external: tunnel.nathanv.app
    k8s-dns.nathanv.me/internal: reverse-proxy.svc.nathanv.home
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`phpmyadmin.nathanv.app`)
    kind: Rule
    services:
    - name: phpmyadmin-service
      port: 80
  tls:
    certResolver: le
    domains:
    - sans:
      - "*.nathanv.app"
